--- a/src/Kurumi/UserBundle/Resources/views/Account/edit_password.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Account/edit_password.html.twig
@@ -10,7 +10,7 @@
         {% include 'PageBundle::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
 
         <fieldset>
-            <legend>Change your password</legend>
+            <legend>{% if user.password is null %}Set your password{% else %}Change your password{% endif %}</legend>
             {% include 'UserBundle:Form:edit_user_password_form.html.twig' with {'form':form} %}
         </fieldset>
     </div>
