--- a/src/Kurumi/UserBundle/Resources/views/Form/edit_user_password_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/edit_user_password_form.html.twig
@@ -2,7 +2,9 @@
 
     {{ form_errors(form) }}
 
+    {% if form.currentPassword is defined %}
     {{ form_row(form.currentPassword) }}
+    {% endif %}
 
     {{ form_row(form.plainPassword) }}
 
