--- a/src/Kurumi/UserBundle/Resources/views/Form/edit_user_picture_modal_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/edit_user_picture_modal_form.html.twig
@@ -25,7 +25,7 @@
         </p>
 
         <p>
-            {% thumbnail user.picture, 'medium' with {title:''} %}
+            {% thumbnail user.picture, 'profile' with {title:''} %}
         </p>
 
         <p>
