--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,35 +5,9 @@
     <title>{{ block('title') }}</title>
 
     {# jQuery #}
-
-
-
-
-
-
-
-
-
-
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 
-    {% if 0 %}
-    {# Used JavaScripts #}
-    {% javascripts
-    'bootstrap/js/bootstrap-button.js'
-    'bootstrap/js/bootstrap-dropdown.js'
-    'bootstrap/js/bootstrap-modal.js'
-    'bootstrap/js/bootstrap-typeahead.js'
-    filter='?yui_js'
-    output='js-compiled/bootstrap.js' %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-    {% else %}
-    <script src="{{ asset('bootstrap/js/bootstrap-button.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap-dropdown.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap-modal.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap-typeahead.js') }}"></script>
-    {% endif %}
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
     {% if 0 %}
     {% javascripts
     '@BriareosAjaxBundle/Resources/public/js/jquery.form.js'
@@ -49,33 +23,10 @@
     <script src="{{ asset('bundles/briareosajax/js/ajax.js') }}"></script>
     {% endif %}
     {# Twitter bootstrap #}
-
-
-
-
-
-
-
-
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//symfony.servehttp.com:1337/bootstrap/less/bootstrap.less">
-    <link rel="stylesheet" href="//symfony.servehttp.com:1337/bootstrap/less/responsive.less">
-
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css">
     {# Page style #}
-
-
-
-
-
-
-
-
-
-
     <link rel="stylesheet" href="//symfony.servehttp.com:1337/less/style.less">
-
     {# Nodejs and chat #}
     {% if 0 %}
     {% javascripts
