--- a/src/Kurumi/UserBundle/Resources/views/Account/sidebar.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Account/sidebar.html.twig
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs nav-stacked">
+<ul class="nav nav-tabs nav-stacked nav-chevron">
     <li class="{{ active == 'account_overview' ? 'active' : '' }}"><a href="{{ path('account_overview') }}" data-ajax><i class="icon-chevron-right pull-right"></i>Account overview</a></li>
     <li class="{{ active == 'account_edit_name' ? 'active' : '' }}"><a href="{{ path('account_edit_name') }}" data-ajax><i class="icon-chevron-right pull-right"></i>Change name</a></li>
     <li class="{{ active == 'account_edit_email' ? 'active' : '' }}"><a href="{{ path('account_edit_email') }}" data-ajax><i class="icon-chevron-right pull-right"></i>Change e-mail address</a></li>
