--- a/src/Kurumi/UserBundle/Resources/views/Form/edit_user_picture_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/edit_user_picture_form.html.twig
@@ -8,7 +8,7 @@
     </p>
 
     <p>
-        {% thumbnail user.picture, 'medium' with {title:''} %}
+        {% thumbnail user.picture, 'profile' with {title:''} %}
     </p>
 
     {% else %}
