--- a/webroot/less/style.less
+++ b/webroot/less/style.less
@@ -2,215 +2,227 @@
 @import "../bootstrap/less/mixins.less";
 
 #front-page {
-    .container-wrapper {
-        background: url(../images/background-1.jpg) #1E2638 top left no-repeat;
+  .container-wrapper {
+    background: url(../images/background-1.jpg) #1E2638 top left no-repeat;
 
-        .container.main {
-            padding-top: 10px;
-            margin-top: 0;
+    .container.main {
+      padding-top: 10px;
+      margin-top: 0;
+    }
+
+    .btn {
+      font-weight: bold;
+    }
+
+    .login-form {
+      a {
+        text-decoration: underline;
+
+        &:hover {
+          text-decoration: none;
         }
-
-        .btn {
-            font-weight: bold;
-        }
-
-        .login-form {
-            a {
-                text-decoration: underline;
-
-                &:hover {
-                    text-decoration: none;
-                }
-            }
-        }
-
-        .register-form-container {
-            background: #4e526b;
-            background: rgba(150, 151, 186, 0.4);
-            border: none;
-
-            .register-header {
-                margin: 0;
-            }
-
-            .help-inline {
-                background: @black;
-                background: rgba(0, 0, 0, 0.7);
-                .border-radius(3px);
-                padding-top: 2px;
-                padding-bottom: 2px;
-                padding-right: 5px;
-                margin-left: 10px;
-            }
-        }
+      }
     }
 
-    .bottom-wrapper {
-        background: url(../images/bkg-footer-v2.gif) #EDEDED repeat-x;
-        color: #777;
-        padding-top: 14px;
-        padding-bottom: 14px;
-        text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
+    .register-form-container {
+      background: #4e526b;
+      background: rgba(150, 151, 186, 0.4);
+      border: none;
 
-        .title {
-            margin-top: 4px;
-        }
+      .register-header {
+        margin: 0;
+      }
+
+      .help-inline {
+        background: @black;
+        background: rgba(0, 0, 0, 0.7);
+        .border-radius(3px);
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-right: 5px;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .bottom-wrapper {
+    background: url(../images/bkg-footer-v2.gif) #EDEDED repeat-x;
+    color: #777;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
+
+    .title {
+      margin-top: 4px;
+    }
+  }
+
+  .footer-wrapper {
+    background: @white;
+    border-top: 3px solid @orange;
+    padding-top: 14px;
+    padding-bottom: 28px;
+    color: #777;
+
+    .logo {
+      margin-right: 14px;
     }
 
-    .footer-wrapper {
-        background: @white;
-        border-top: 3px solid @orange;
-        padding-top: 14px;
-        padding-bottom: 28px;
-        color: #777;
+    .copyright {
+      display: block;
+      padding: 8px 12px;
+      line-height: 14px;
 
-        .logo {
-            margin-right: 14px;
-        }
-
-        .copyright {
-            display: block;
-            padding: 8px 12px;
-            line-height: 14px;
-
-            margin: 2px 2px 2px 0;
-        }
+      margin: 2px 2px 2px 0;
     }
+  }
 
-    .slogan,
-    .login-form label,
-    .login-header,
-    .login-form a,
-    .register-header,
-    .register-form label {
-        color: @white;
-        text-shadow: rgba(0, 0, 0, .6) 0 1px 1px;
-    }
+  .slogan,
+  .login-form label,
+  .login-header,
+  .login-form a,
+  .register-header,
+  .register-form label {
+    color: @white;
+    text-shadow: rgba(0, 0, 0, .6) 0 1px 1px;
+  }
 
-    .control-group.error > label,
-    .control-group.error .help-block,
-    .control-group.error .help-inline {
-        color: @white;
-    }
+  .control-group.error > label,
+  .control-group.error .help-block,
+  .control-group.error .help-inline {
+    color: @white;
+  }
 
-    .icon-male {
-        background: url(../images/icon-male.png);
-    }
+  .icon-male {
+    background: url(../images/icon-male.png);
+  }
 
-    .icon-female {
-        background: url(../images/icon-female.png);
-    }
+  .icon-female {
+    background: url(../images/icon-female.png);
+  }
 
-    #user_register_profile_gender_0 {
-        color: @blueDark !important;
-        text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75) !important;
-    }
+  #user_register_profile_gender_0 {
+    color: @blueDark !important;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75) !important;
+  }
 
-    .label-female {
-        color: #cc64d4 !important;
-        text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75) !important;
-    }
+  .label-female {
+    color: #cc64d4 !important;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75) !important;
+  }
 
-    .meet-message {
-        font-size: 44px;
-        line-height: 48px;
-        color: @white;
-        text-shadow: rgba(0, 0, 0, .5) 0 2px 2px;
-        margin-top: 60%;
-    }
+  .meet-message {
+    font-size: 44px;
+    line-height: 48px;
+    color: @white;
+    text-shadow: rgba(0, 0, 0, .5) 0 2px 2px;
+    margin-top: 60%;
+  }
 }
 
 .main.container {
-    margin-top: 15px;
+  margin-top: 55px;
 }
 
 @media (max-width: 767px) {
-    #front-page {
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 15px;
-        padding-right: 15px;
-        background: #1E2638 !important;
+  #front-page {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background: #1E2638 !important;
 
-        .meet-message {
-            font-size: 24px;
-            line-height: 26px;
-            margin-top: 10px;
-        }
-
-        .container-wrapper {
-            background: none !important;
-        }
-
-        .bottom-wrapper {
-            .border-top-left-radius(4px);
-            .border-top-right-radius(4px);
-        }
-
-        .footer-wrapper {
-            padding-left: 15px;
-            padding-right: 15px;
-        }
+    .meet-message {
+      font-size: 24px;
+      line-height: 26px;
+      margin-top: 10px;
     }
+
+    .container-wrapper {
+      background: none !important;
+    }
+
+    .bottom-wrapper {
+      .border-top-left-radius(4px);
+      .border-top-right-radius(4px);
+    }
+
+    .footer-wrapper {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 }
 
 @media (max-width: 480px) {
 }
 
 .alert .alert-messages {
-    margin: 0 0 0 15px;
+  margin: 0 0 0 15px;
 }
 
-#edit-account {
-    .nav.nav-tabs.nav-stacked li {
-        a {
-            .icon-chevron-right {
-                float: right;
-                margin-top: 2px;
-                margin-right: -6px;
-                .opacity(25);
-            }
-            &:hover .icon-chevron-right {
-                .opacity(50);
-            }
-        }
-        &.active a {
-            background: @linkColor;
-            color: @white;
-            .icon-chevron-right {
-                .opacity(75);
-            }
-            &:hover .icon-chevron-right {
-                .opacity(50);
-            }
-        }
+.nav.nav-tabs.nav-stacked.nav-chevron li {
+  a {
+    .icon-chevron-right {
+      float: right;
+      margin-top: 2px;
+      margin-right: -6px;
+      .opacity(25);
     }
+    &:hover {
+      background-color: whiteSmoke;
+
+      .icon-chevron-right {
+        .opacity(50);
+      }
+    }
+  }
+  &.active a {
+    background: @linkColor;
+    color: @white;
+    cursor: pointer;
+
+    .icon-chevron-right {
+      .opacity(75);
+    }
+    &:hover .icon-chevron-right {
+      .opacity(50);
+    }
+  }
 }
 
 #account-edit {
-    .user-picture {
-        position: absolute;
-        top: 10px;
+  .user-picture {
+    position: absolute;
+    top: 10px;
+  }
+
+  .summary {
+    margin-left: 42px;
+
+    .user-name {
+      font-weight: bold;
+      line-height: 14px;
     }
 
-    .summary {
-        margin-left: 42px;
+    .link {
 
-        .user-name {
-            font-weight: bold;
-            line-height: 14px;
-        }
-
-        .link {
-
-        }
     }
+  }
 }
 
 #buy-credits-top {
-    margin-top: 8px;
+  margin-top: 10px;
 }
 
 #search_people {
-    margin-bottom: 0;
+  margin-bottom: 0;
+}
+
+.badge-empty {
+  font-size: @baseFontSize * .846;
+  line-height: 14px;
+  padding: 1px 9px 2px;
+  vertical-align: baseline;
+  white-space: nowrap;
 }
