--- a/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
@@ -3,87 +3,89 @@
 {% block title %}{{ 'page.front.title'|trans }}{% endblock %}
 
 {% block body %}
-<div id="front-page">
-    <div class="container-wrapper">
-        <div class="container main">
-            <div class="row">
-                <div class="span5">
-                    <h1 class="hide">Kurumi</h1>
-                    <img src="http://symfony.servehttp.com/images/logo.png" height="57"/>
-                    <h4 class="slogan">{{ 'page.front.motto'|trans }}</h4>
-
-                    <div class="meet-message">
-                        {% if geocoded is empty or geocoded.city is empty %}
-                        {{ 'page.front.meet_your_area'|trans }}
-                        {% else %}
-                        {{ 'page.front.meet_your_city'|trans({'%city%':geocoded.city}) }}
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="span7">
-                    {{ locale_switcher() }}
-                    <h3 class="login-header">{{ 'page.front.log_in'|trans }}</h3>
-                    {% include 'UserBundle:Form:login_form.html.twig' %}
-
-                    <div class="register-form-container well">
-                        <h3 class="register-header">{{ 'page.front.first_time'|trans }} {{ 'page.front.join_now'|trans }}</h3>
-
-                        {% include 'UserBundle:Form:register_form.html.twig' with {'form':form_register} %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="bottom-wrapper">
-            <div class="container">
+    <div id="front-page">
+        <div class="container-wrapper">
+            <div class="container main">
                 <div class="row">
-                    <div class="span3">
-                        <div class="row-fluid">
-                            <img src="/images/icon-happy.png" class="pull-left">
-                            <h4 class="title">Fun</h4>
+                    <div class="span5">
+                        <h1 class="hide">Kurumi</h1>
+                        <img src="http://symfony.servehttp.com/images/logo.png" height="57"/>
+                        <h4 class="slogan">{{ 'page.front.motto'|trans }}</h4>
 
-                            <p>Kurumi is all about having fun, playing games and visiting profiles.</p>
+                        <div class="meet-message">
+                            {% if geocoded is empty or geocoded.city is empty %}
+                                {{ 'page.front.meet_your_area'|trans }}
+                            {% else %}
+                                {{ 'page.front.meet_your_city'|trans({'%city%':geocoded.city}) }}
+                            {% endif %}
                         </div>
                     </div>
-                    <div class="span3">
-                        <div class="row-fluid">
-                            <img src="/images/icon-chat.png" class="pull-left">
-                            <h4 class="title">Chat</h4>
-
-                            <p>We promise you lots of people who are eager to have a chat.</p>
+                    <div class="span7">
+                        <div class="pull-right">
+                            {{ locale_switcher() }}
                         </div>
-                    </div>
-                    <div class="span3">
-                        <div class="row-fluid">
-                            <img src="/images/icon-no-robots.png" class="pull-left">
-                            <h4 class="title">With real people</h4>
+                        <h3 class="login-header">{{ 'page.front.log_in'|trans }}</h3>
+                        {% include 'UserBundle:Form:login_form.html.twig' %}
 
-                            <p>No fake profiles on Kurumi. You should feel safe and have lots of fun!</p>
-                        </div>
-                    </div>
-                    <div class="span3">
-                        <div class="row-fluid">
-                            <img src="/images/icon-new-people.png" class="pull-left">
-                            <h4 class="title">The rest is up to you</h4>
+                        <div class="register-form-container well">
+                            <h3 class="register-header">{{ 'page.front.first_time'|trans }} {{ 'page.front.join_now'|trans }}</h3>
 
-                            <p>Kurumi is for everyone, so come on in and join the fun!</p>
+                            {% include 'UserBundle:Form:register_form.html.twig' with {'form':form_register} %}
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer-wrapper">
-            <div class="container">
-                <ul class="nav nav-pills">
-                    <li><img class="logo" src="/images/logo-gray.png" height="31" width="124"></li>
-                    <li><a href>About</a></li>
-                    <li><a href>Privacy</a></li>
-                    <li><a href>Terms of use</a></li>
-                    <li><a href>FAQ</a></li>
-                    <li><a href>Contact</a></li>
-                    <li class="pull-right"><span class="copyright">Copyright &copy; Silver Media Ltd.</span></li>
-                </ul>
+            <div class="bottom-wrapper">
+                <div class="container">
+                    <div class="row">
+                        <div class="span3">
+                            <div class="row-fluid">
+                                <img src="/images/icon-happy.png" class="pull-left">
+                                <h4 class="title">Fun</h4>
+
+                                <p>Kurumi is all about having fun, playing games and visiting profiles.</p>
+                            </div>
+                        </div>
+                        <div class="span3">
+                            <div class="row-fluid">
+                                <img src="/images/icon-chat.png" class="pull-left">
+                                <h4 class="title">Chat</h4>
+
+                                <p>We promise you lots of people who are eager to have a chat.</p>
+                            </div>
+                        </div>
+                        <div class="span3">
+                            <div class="row-fluid">
+                                <img src="/images/icon-no-robots.png" class="pull-left">
+                                <h4 class="title">With real people</h4>
+
+                                <p>No fake profiles on Kurumi. You should feel safe and have lots of fun!</p>
+                            </div>
+                        </div>
+                        <div class="span3">
+                            <div class="row-fluid">
+                                <img src="/images/icon-new-people.png" class="pull-left">
+                                <h4 class="title">The rest is up to you</h4>
+
+                                <p>Kurumi is for everyone, so come on in and join the fun!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-wrapper">
+                <div class="container">
+                    <ul class="nav nav-pills">
+                        <li><img class="logo" src="/images/logo-gray.png" height="31" width="124"></li>
+                        <li><a href>About</a></li>
+                        <li><a href>Privacy</a></li>
+                        <li><a href>Terms of use</a></li>
+                        <li><a href>FAQ</a></li>
+                        <li><a href>Contact</a></li>
+                        <li class="pull-right"><span class="copyright">Copyright &copy; Silver Media Ltd.</span></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
