--- a/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
@@ -13,14 +13,14 @@
                         <h4 class="slogan">{{ 'page.front.motto'|trans }}</h4>
 
                         <div class="btn-group connect-with">
-                            <a href="{{ path('facebook_connect') }}" data-oauth data-loader="#oauth-loader" class="btn btn-primary">Connect with <span class="connect-facebook">Facebook</span></a>
+                            <a href="{{ path('hwi_oauth_service_redirect',{'service':'login_facebook'}) }}" data-oauth data-loader="#oauth-loader" class="btn btn-primary">Connect with <span class="connect-facebook">Facebook</span></a>
                             <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                                 or… <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#"><span class="connect-yahoo"></span> Yahoo!</a></li>
-                                <li><a href="#"><span class="connect-google"></span> Google</a></li>
-                                <li><a href="#"><span class="connect-msn"></span> MSN</a></li>
+                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_google'}) }}" data-oauth data-loader="#oauth-loader"><span class="connect-google"></span> Google</a></li>
+                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_yahoo'}) }}"><span class="connect-yahoo"></span> Yahoo!</a></li>
+                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_windows_live'}) }}"><span class="connect-msn"></span> Windows Live</a></li>
                             </ul>
                         </div>
 
