--- a/src/Kurumi/UserBundle/Resources/views/Facebook/connect_check_cancel.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Facebook/connect_check_cancel.html.twig
@@ -4,6 +4,6 @@
     <div class="container">
         Connection canceled!
 
-        <a href="{{ path('facebook_connect') }}" class="btn btn-large btn-primary">Try again</a> <a class="btn btn-large">Cancel</a>
+        <a href="{{ path('oauth_facebook_connect') }}" class="btn btn-large btn-primary">Try again</a> <a class="btn btn-large">Cancel</a>
     </div>
 {% endblock %}
