--- a/src/Kurumi/UserBundle/Resources/views/Profile/view.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Profile/view.html.twig
@@ -1,6 +1,11 @@
 {% extends 'UserBundle:Profile:page.html.twig' %}
 
+{% block title %}{{ user.name }}{% endblock %}
+
 {% block profile_page %}
+
+    {% include 'PageBundle::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
+
     {% include 'UserBundle:Profile:tabs.html.twig' %}
     <p>
         {{ profile_info.getSearchInfo(subject.profile) }}
