--- a/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Front/front_page.html.twig
@@ -19,8 +19,8 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_google'}) }}" data-oauth data-loader="#oauth-loader"><span class="connect-google"></span> Google</a></li>
-                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_yahoo'}) }}"><span class="connect-yahoo"></span> Yahoo!</a></li>
-                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_windows_live'}) }}"><span class="connect-msn"></span> Windows Live</a></li>
+                                {# <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_yahoo'}) }}" data-oauth data-loader="#oauth-loader"><span class="connect-yahoo"></span> Yahoo!</a></li> #}
+                                <li><a href="{{ path('hwi_oauth_service_redirect',{'service':'login_windows_live'}) }}" data-oauth data-loader="#oauth-loader"><span class="connect-msn"></span> Windows Live</a></li>
                             </ul>
                         </div>
 
