--- a/src/Kurumi/UserBundle/Resources/views/CRUD/list_profile.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/CRUD/list_profile.html.twig
@@ -2,8 +2,8 @@
 
 {% block field %}
     {% if field_description.hasAssociationAdmin and field_description.associationadmin.id(value) %}
-        {% if field_description.hasAssociationAdmin and field_description.associationadmin.isGranted('EDIT') and field_description.associationadmin.hasRoute('edit') %}
-            <a href="{{ field_description.associationadmin.generateObjectUrl('edit', value) }}">{{ value|render_relation_element(field_description) }}</a>
+        {% if field_description.hasAssociationAdmin and field_description.associationadmin.isGranted('EDIT') and field_description.associationAdmin.hasRoute('edit') %}
+            <a href="{{ field_description.associationAdmin.generateObjectUrl('edit', value) }}">{{ value|render_relation_element(field_description) }}</a>
         {% else %}
             {{ value|render_relation_element(field_description) }}
         {% endif %}
