Remove unnecessary 'with's

--- a/app/Resources/views/Account/edit_email.html.twig
+++ b/app/Resources/views/Account/edit_email.html.twig
@@ -11,7 +11,7 @@
 
         <fieldset>
             <legend>Change your e-mail address</legend>
-            {% include ':Form:user_email.html.twig' with {'form':form} %}
+            {% include ':Form:user_email.html.twig' %}
         </fieldset>
     </div>
 </div>
