--- a/app/Resources/views/Account/edit_password.html.twig
+++ b/app/Resources/views/Account/edit_password.html.twig
@@ -3,15 +3,15 @@
 {% block edit_account %}
 <div class="row">
     <div class="span3">
-        {% include ':Account:sidebar.html.twig' with {'active':'account_edit_password'} %}
+        {% include ':Account:sidebar.html.twig' %}
     </div>
     <div class="span9">
 
-        {% include '::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
+        {% include '::flash_messages.html.twig' %}
 
         <fieldset>
             <legend>{% if user.password is null %}Set your password{% else %}Change your password{% endif %}</legend>
-            {% include ':Form:user_password.html.twig' with {'form':form} %}
+            {% include ':Form:user_password.html.twig' %}
         </fieldset>
     </div>
 </div>
