--- a/app/Resources/views/Account/layout.html.twig
+++ b/app/Resources/views/Account/layout.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-{% include ':Segment:navbar_top.html.twig' with {'active':'edit_profile'} %}
+{% include ':Segment:navbar_top.html.twig' %}
 
 <div id="edit-account" class="main container">
     <div class="page-header">
