--- a/app/Resources/views/Info/general.html.twig
+++ b/app/Resources/views/Info/general.html.twig
@@ -5,7 +5,7 @@
 {% block info_page %}
 <div class="row">
     <div class="span3">
-        {% include ':Info:sidebar.html.twig' with {'active':'info_faq'} %}
+        {% include ':Info:sidebar.html.twig' %}
     </div>
 
     <div class="span9">
