--- a/app/Resources/views/Info/layout.html.twig
+++ b/app/Resources/views/Info/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% include ':Segment:navbar_top.html.twig' with {'active':false} %}
+{% include ':Segment:navbar_top.html.twig' %}
 
 <div class="main container">
     <div data-pjax-container="info_page">
