--- a/app/Resources/views/Play/play.html.twig
+++ b/app/Resources/views/Play/play.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    {% include ':Segment:navbar_top.html.twig' with {'active':'play'} %}
+    {% include ':Segment:navbar_top.html.twig' %}
 
     <div class="main container">
         I want to play a game.
