--- a/app/Resources/views/Profile/view.html.twig
+++ b/app/Resources/views/Profile/view.html.twig
@@ -4,7 +4,7 @@
 
 {% block profile_page %}
 
-    {% include '::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
+    {% include '::flash_messages.html.twig' %}
 
     {% include ':Profile:tabs.html.twig' %}
     <p>
