--- a/app/Resources/views/Segment/navbar_top.html.twig
+++ b/app/Resources/views/Segment/navbar_top.html.twig
@@ -1,4 +1,4 @@
-{% set active = 'useerrr' %}
+{% set active = current_route() %}
 <div><div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
