--- a/app/Resources/views/Account/edit_picture.html.twig
+++ b/app/Resources/views/Account/edit_picture.html.twig
@@ -3,15 +3,15 @@
 {% block edit_account %}
     <div class="row">
         <div class="span3">
-            {% include ':Account:sidebar.html.twig' with {'active':'account_edit_picture'} %}
+            {% include ':Account:sidebar.html.twig' %}
         </div>
         <div class="span9">
 
-            {% include '::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
+            {% include '::flash_messages.html.twig' %}
 
             <fieldset>
                 <legend>Your picture! <small>Isn't here =(</small></legend>
-                {% include ':Form:user_picture.html.twig' with {'form':form} %}
+                {% include ':Form:user_picture.html.twig' %}
             </fieldset>
         </div>
     </div>
