--- a/app/Resources/views/Profile/layout.html.twig
+++ b/app/Resources/views/Profile/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% include ':Segment:navbar_top.html.twig' with {'active': (own_profile ? 'home' : false)} %}
+    {% include ':Segment:navbar_top.html.twig' %}
 
     <div class="container main">
         <h1>
