--- a/app/Resources/views/Profile/photos.html.twig
+++ b/app/Resources/views/Profile/photos.html.twig
@@ -2,7 +2,7 @@
 
 {% block profile_page %}
 
-    {% include '::flash_messages.html.twig' with {'messages':app.session.flashbag.all()} %}
+    {% include '::flash_messages.html.twig' %}
 
     {% include ':Profile:tabs.html.twig' %}
 
