--- a/app/Resources/views/Form/fill_profile.html.twig
+++ b/app/Resources/views/Form/fill_profile.html.twig
@@ -1,6 +1,6 @@
 <form novalidate id="{{ form.vars.id }}" {{ form_enctype(form) }} action="{{ path(route) }}" data-ajax class="form-horizontal" method="post">
 
-    {{ form_rest(form) }}
+    {{ form_widget(form) }}
 
     <div class="form-actions">
         <button type="submit" class="btn btn-primary">Submit</button>
