Load CSS before JS

--- a/app/Resources/views/OAuth/success.html.twig
+++ b/app/Resources/views/OAuth/success.html.twig
@@ -9,7 +9,8 @@
             });
             self.close();
         } else {
-            window.location.href = '{{ path('front') }}';
+            console.log(window.opener);
+            //window.location.href = '{{ path('front') }}';
         }
     </script>
 {% endblock %}
